rtic/ui/arbiter-not-send.stderr
error[E0277]: `Rc<u32>` cannot be sent between threads safely
  --> ui/arbiter-not-send.rs:13:12
   |
13 |         x: Arbiter<Rc<u32>>,
   |            ^^^^^^^^^^^^^^^^ `Rc<u32>` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `Rc<u32>`
   = note: required for `Arbiter<Rc<u32>>` to implement `Send`
note: required by a bound in `rtic::export::assert_send`
  --> src/export.rs
   |
   | pub fn assert_send<T: Send>() {}
   |                       ^^^^ required by this bound in `assert_send`
